--- a/admin/app/views/spree/admin/stock_transfers/index.html.erb
+++ b/admin/app/views/spree/admin/stock_transfers/index.html.erb
@@ -10,29 +10,31 @@
   end %>
 <% end %>
 
-<%= render "filters" %>
-<% if @stock_transfers.any? %>
-  <div class="table-responsive">
-    <table class="table" id="listing_products">
-      <thead class="text-muted">
-        <tr>
-          <th scope="col"><%= Spree.t(:number) %></th>
-          <th scope="col"><%= Spree.t(:reference) %></th>
-          <th scope="col"><%= Spree.t(:source) %></th>
-          <th scope="col"><%= Spree.t(:destination) %></th>
-          <th scope="col"><%= Spree.t(:variants_count) %></th>
-          <th scope="col"><%= Spree.t(:created_at) %></th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-        <%= render partial: 'stock_transfer', collection: @stock_transfers %>
-      </tbody>
-    </table>
-  </div>
-<% else %>
-  <div class="text-muted p-5 d-flex align-items-center w-100 justify-content-center">
-    <%= Spree.t(:no_resource_found, resource: Spree.t(:stock_transfers)) %>
-  </div>
-<% end %>
-<%= render 'spree/admin/shared/index_table_options', collection: @stock_transfers, simple: true if @stock_transfers.any? %>
+<div class="card-lg p-0">
+  <%= render "filters" %>
+  <% if @stock_transfers.any? %>
+    <div class="table-responsive">
+      <table class="table" id="listing_products">
+        <thead class="text-muted">
+          <tr>
+            <th scope="col"><%= Spree.t(:number) %></th>
+            <th scope="col"><%= Spree.t(:reference) %></th>
+            <th scope="col"><%= Spree.t(:source) %></th>
+            <th scope="col"><%= Spree.t(:destination) %></th>
+            <th scope="col"><%= Spree.t(:variants_count) %></th>
+            <th scope="col"><%= Spree.t(:created_at) %></th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <%= render partial: 'stock_transfer', collection: @stock_transfers %>
+        </tbody>
+      </table>
+    </div>
+  <% else %>
+    <div class="text-muted p-5 d-flex align-items-center w-100 justify-content-center">
+      <%= Spree.t(:no_resource_found, resource: Spree.t(:stock_transfers)) %>
+    </div>
+  <% end %>
+  <%= render 'spree/admin/shared/index_table_options', collection: @stock_transfers, simple: true if @stock_transfers.any? %>
+</div>
