--- a/admin/app/views/spree/admin/option_types/_filter.html.erb
+++ b/admin/app/views/spree/admin/option_types/_filter.html.erb
@@ -1,4 +1,4 @@
-<%= search_form_for [:admin, @search], class: "filter-wrap border-bottom", data: {controller: "ransack"} do |f| %>
+<%= search_form_for [:admin, @search], class: "filter-wrap border-bottom", data: {controller: "filters"} do |f| %>
   <div class="d-flex flex-column flex-lg-row">
     <div class="flex-grow-1 mr-lg-2 mb-3 mb-lg-0">
       <div class="form-control d-flex align-items-center py-0 focus-shadow-blue focus-border-blue">
@@ -6,7 +6,7 @@
         <%= f.search_field :name_cont,
                        class: "form-control-plaintext px-0",
                        data: {
-                         ransack_target: :input,
+                         filters_target: :input,
                          badge_name: Spree.t(:name),
                        },
                        placeholder: "#{Spree.t(:search_by)} #{Spree.t(:name)}" %>
@@ -16,5 +16,5 @@
 
   <%= render "spree/admin/shared/filter_badge_template" %>
 
-  <div data-ransack-target="badgesContainer" class="filter-badges-container"></div>
+  <div data-filters-target="badgesContainer" class="filter-badges-container"></div>
 <% end %>
