--- a/admin/app/views/spree/admin/stock_items/_filters.html.erb
+++ b/admin/app/views/spree/admin/stock_items/_filters.html.erb
@@ -1,4 +1,4 @@
-<%= search_form_for [:admin, @search], class: "filter-wrap border-bottom", data: { controller: "ransack" } do |f| %>
+<%= search_form_for [:admin, @search], class: "filter-wrap border-bottom", data: { controller: "filters" } do |f| %>
   <div class="d-flex flex-column flex-lg-row">
     <div class="flex-grow-1 mr-lg-2 mb-3 mb-lg-0">
       <div class="form-control d-flex align-items-center py-0 focus-shadow-blue focus-border-blue">
@@ -7,7 +7,7 @@
                        class: "form-control-plaintext px-0",
                        placeholder: "#{Spree.t(:search_by)} #{Spree.t(:product_name)}",
                        data: {
-                         ransack_target: :input,
+                         filters_target: :input,
                          badge_name: Spree.t(:product_name),
                        } %>
       </div>
@@ -33,7 +33,7 @@
       <div class="col-12 col-lg-6">
         <div class="form-group">
           <%= f.label :variant_sku_cont, Spree.t(:sku) %>
-          <%= f.text_field :variant_sku_cont, size: 15, class: "form-control", data: {ransack_target: :input} %>
+          <%= f.text_field :variant_sku_cont, size: 15, class: "form-control", data: {filters_target: :input} %>
         </div>
       </div>
 
@@ -43,7 +43,7 @@
           <%= f.select :stock_location_id_eq,
                    available_stock_locations_list,
                    { include_blank: true },
-                   class: "custom-select", data: {ransack_target: :input}  %>
+                   class: "custom-select", data: {filters_target: :input}  %>
         </div>
       </div>
 
@@ -59,5 +59,5 @@
 
   <%= render "spree/admin/shared/filter_badge_template" %>
 
-  <div data-ransack-target="badgesContainer" class="filter-badges-container"></div>
+  <div data-filters-target="badgesContainer" class="filter-badges-container"></div>
 <% end %>
