--- a/admin/app/views/spree/admin/stock_transfers/_filters.html.erb
+++ b/admin/app/views/spree/admin/stock_transfers/_filters.html.erb
@@ -1,4 +1,4 @@
-<%= search_form_for [:admin, @search], class: "filter-wrap border-bottom", data: {controller: "ransack"}  do |f| %>
+<%= search_form_for [:admin, @search], class: "filter-wrap border-bottom", data: {controller: "filters"} do |f| %>
   <div class="d-flex flex-column flex-lg-row">
     <div class="flex-grow-1 mr-lg-2 mb-3 mb-lg-0">
       <div class="form-control d-flex align-items-center py-0 focus-shadow-blue focus-border-blue">
@@ -8,7 +8,7 @@
           class: "form-control-plaintext js-quick-search px-0",
           placeholder: "#{Spree.t(:search_by)} #{Spree.t(:number)}",
           data: {
-            ransack_target: :input,
+            filters_target: :input,
             badge_name: Spree.t(:number),
         } %>
       </div>
@@ -33,7 +33,7 @@
         <div class="col-12 col-lg-6">
           <div class="form-group">
             <%= f.label :reference_cont, Spree.t(:reference) %>
-            <%= f.text_field :reference_cont, include_blank: true, size: 15, class: "form-control", data: { ransack_target: :input } %>
+            <%= f.text_field :reference_cont, include_blank: true, size: 15, class: "form-control", data: { filters_target: :input } %>
           </div>
         </div>
         <div class="col-12 col-lg-6">
@@ -44,7 +44,7 @@
                    { include_blank: true },
                    class: "custom-select",
                    data: {
-                     ransack_target: :input,
+                     filters_target: :input,
                    } %>
           </div>
         </div>
@@ -56,7 +56,7 @@
                    { include_blank: true },
                    class: "custom-select",
                    data: {
-                     ransack_target: :input,
+                     filters_target: :input,
                    } %>
           </div>
         </div>
@@ -68,5 +68,5 @@
   </div>
 
   <%= render "spree/admin/shared/filter_badge_template" %>
-  <div data-ransack-target="badgesContainer" class="filter-badges-container"></div>
+  <div data-filters-target="badgesContainer" class="filter-badges-container"></div>
 <% end %>
