--- a/admin/app/views/spree/admin/taxonomies/index.html.erb
+++ b/admin/app/views/spree/admin/taxonomies/index.html.erb
@@ -7,7 +7,7 @@
 <% end if can?(:create, Spree::Taxonomy) %>
 
 <div class="card-lg p-0">
-  <%= search_form_for [:admin, @search], class: "filter-wrap border-bottom", data: {controller: "ransack"} do |f| %>
+  <%= search_form_for [:admin, @search], class: "filter-wrap border-bottom", data: {controller: "filters"} do |f| %>
     <div class="d-flex flex-column flex-lg-row">
       <div class="flex-grow-1 mr-lg-2 mb-3 mb-lg-0">
         <div class="form-control d-flex align-items-center py-0 focus-shadow-blue focus-border-blue">
@@ -16,7 +16,7 @@
                          class: "form-control-plaintext px-0",
                          placeholder: "#{Spree.t(:search_by)} #{Spree.t(:name)}",
                          data: {
-                           ransack_target: :input,
+                           filters_target: :input,
                            badge_name: Spree.t(:name),
                          } %>
         </div>
@@ -24,7 +24,7 @@
     </div>
 
     <%= render "spree/admin/shared/filter_badge_template" %>
-    <div data-ransack-target="badgesContainer" class="filter-badges-container"></div>
+    <div data-filters-target="badgesContainer" class="filter-badges-container"></div>
   <% end %>
 
   <% if @taxonomies.present? %>
