Do not use bootstrap for filters

--- a/admin/app/views/spree/admin/option_types/_filter.html.erb
+++ b/admin/app/views/spree/admin/option_types/_filter.html.erb
@@ -1,4 +1,4 @@
-<%= search_form_for [:admin, @search], class: "filter-wrap border-bottom", data: {controller: "filters"} do |f| %>
+<%= search_form_for [:admin, @search], class: "filter-wrap border-bottom", data: {controller: "filters reveal", reveal_hidden_class: "d-none"} do |f| %>
   <div class="d-flex flex-column flex-lg-row">
     <div class="flex-grow-1 mr-lg-2 mb-3 mb-lg-0">
       <div class="form-control d-flex align-items-center py-0 focus-shadow-blue focus-border-blue">
