--- a/admin/app/views/spree/admin/products/_filters.html.erb
+++ b/admin/app/views/spree/admin/products/_filters.html.erb
@@ -1,17 +1,6 @@
 <%= search_form_for product_list_filters_search_form_path, class: "filter-wrap border-bottom", data: {controller: "filters reveal", reveal_hidden_class: "d-none"} do |f| %>
-  <div class="d-flex flex-column flex-lg-row">
-    <div class=" flex-grow-1 mr-lg-2 mb-3 mb-lg-0">
-      <div class=" form-control d-flex align-items-center py-0 focus-shadow-blue focus-border-blue ">
-        <%= icon "search", class: "mr-3 text-muted" %>
-        <%= f.search_field :multi_search,
-                       class: "form-control-plaintext js-quick-search px-0",
-                       placeholder: "#{Spree.t(:search_by)} Name, SKU, brand, etc",
-                       data: {
-                         badge_name: Spree.t(:query),
-                         filters_target: :input,
-                       } %>
-      </div>
-    </div>
+  <div class="d-flex flex-column flex-lg-row gap-2">
+    <%= render 'spree/admin/shared/filters_search_bar', param: :name_cont, label: "Name, SKU, brand, etc", badge_name: Spree.t(:query) %>
 
     <div class="d-flex align-items-center justify-content-between">
       <%= render "spree/admin/products/table_filter_dropdown" %>
