--- a/admin/app/views/spree/admin/stock_items/_filters.html.erb
+++ b/admin/app/views/spree/admin/stock_items/_filters.html.erb
@@ -1,17 +1,6 @@
 <%= search_form_for [:admin, @search], class: "filter-wrap border-bottom", data: { controller: "filters reveal", reveal_hidden_class: "d-none" } do |f| %>
-  <div class="d-flex flex-column flex-lg-row">
-    <div class="flex-grow-1 mr-lg-2 mb-3 mb-lg-0">
-      <div class="form-control d-flex align-items-center py-0 focus-shadow-blue focus-border-blue">
-        <%= icon "search", class: "mr-3 text-muted" %>
-        <%= f.search_field :variant_product_name_cont,
-                       class: "form-control-plaintext px-0",
-                       placeholder: "#{Spree.t(:search_by)} #{Spree.t(:product_name)}",
-                       data: {
-                         filters_target: :input,
-                         badge_name: Spree.t(:product_name),
-                       } %>
-      </div>
-    </div>
+  <div class="d-flex flex-column flex-lg-row gap-2">
+    <%= render 'spree/admin/shared/filters_search_bar', param: :variant_product_name_cont, label: Spree.t(:product_name) %>
 
     <%= render 'spree/admin/shared/filters_button' %>
   </div>
