--- a/admin/app/views/spree/admin/zones/_state_members.html.erb
+++ b/admin/app/views/spree/admin/zones/_state_members.html.erb
@@ -8,6 +8,11 @@
 
     <div class="card-body">
       <div class="form-group">
+        <%= label_tag :states_country_id, Spree.t(:country) %>
+        <%= tom_select_tag :states_country_id, class: 'w-100', options: Spree::Country.joins(:states).to_tom_select_json, active_option: @selected_country&.id, select_data: {action: "auto-submit#submit"} %>
+      </div>
+
+      <div class="form-group">
         <%= zone_form.label :state_ids, Spree.t(:states) %>
         <%= tom_select_tag 'zone[state_ids]', multiple: true, class: 'w-100', options: @states.to_tom_select_json, active_option: @zone.state_ids %>
       </div>
