--- a/admin/app/views/spree/admin/zones/new.html.erb
+++ b/admin/app/views/spree/admin/zones/new.html.erb
@@ -5,7 +5,7 @@
 
 <%= render partial: 'spree/admin/shared/error_messages', locals: { target: @zone } %>
 
-<%= form_for [:admin, @zone] do |zone_form| %>
+<%= form_for [:admin, @zone], data: {controller: 'auto-submit'} do |zone_form| %>
   <%= render partial: 'form', locals: { zone_form: zone_form } %>
   <%= render 'spree/admin/shared/new_resource_links' %>
 <% end %>
