--- a/admin/app/views/spree/admin/products/_filters.html.erb
+++ b/admin/app/views/spree/admin/products/_filters.html.erb
@@ -1,13 +1,13 @@
 <%= search_form_for product_list_filters_search_form_path, class: "filter-wrap border-bottom", data: {controller: "filters reveal", reveal_hidden_class: "d-none"} do |f| %>
   <div class="d-flex flex-column flex-lg-row gap-2">
-    <%= render 'spree/admin/shared/filters_search_bar', param: :name_cont, label: "Name, SKU, brand, etc", badge_name: Spree.t(:query) %>
+    <%= render 'spree/admin/shared/filters_search_bar', param: :multi_search, label: "Name, SKU, brand, etc", badge_name: Spree.t(:query) %>
 
     <div class="d-flex align-items-center justify-content-between">
       <%= render "spree/admin/products/table_filter_dropdown" %>
       <%= render 'spree/admin/shared/filters_button' %>
     </div>
   </div>
-  <div data-reveal-target="item" class="d-none mt-4">
+  <div data-reveal-target="item" class="d-none mt-4" id="table-filter">
     <%= f.hidden_field :status_eq, value: params.dig(:q, :status_eq) %>
     <div class="row">
       <div class="col-12 col-lg-6">
