--- a/admin/app/views/spree/admin/pages/_filters.html.erb
+++ b/admin/app/views/spree/admin/pages/_filters.html.erb
@@ -1,9 +1,7 @@
-<%= search_form_for [:admin, @search], url: spree.admin_pages_path do |f| %>
-  <div class="form-group">
-    <%= f.label :name_cont, Spree.t(:name) %>
-    <%= f.text_field :name_cont, class: 'form-control js-quick-search-target js-filterable' %>
-  </div>
-  <div class="form-actions">
-    <%= button Spree.t(:search), 'search' %>
-  </div>
+<%= search_form_for [:admin, @search], url: spree.admin_pages_path , class: "filter-wrap border-bottom", data: {controller: "filters reveal", reveal_hidden_class: "d-none"} do |f| %>
+  <%= render 'spree/admin/shared/filters_search_bar', param: :name_cont, label: Spree.t(:name) %>
+
+  <%= render "spree/admin/shared/filter_badge_template" %>
+
+  <div data-filters-target="badgesContainer" class="filter-badges-container"></div>
 <% end %>
