--- a/admin/app/views/spree/admin/shared/_filters_search_bar.html.erb
+++ b/admin/app/views/spree/admin/shared/_filters_search_bar.html.erb
@@ -1,10 +1,13 @@
+<% label ||= Spree.t(:query) %>
 <% badge_name ||= label %>
+<% placeholder ||= [Spree.t(:search), controller_name.humanize.downcase].join(' ') %>
+
 <div class="form-control d-flex align-items-center py-0 focus-shadow-blue focus-border-blue flex-grow-1 mb-3 mb-lg-0 w-auto">
   <%= icon "search", class: "mr-3 text-muted" %>
   <%= search_field_tag "q[#{param}]",
   params.dig(:q, param),
   class: "form-control-plaintext px-0",
-  placeholder: "#{Spree.t(:search_by)} #{label}",
+  placeholder: placeholder,
   data: {
     filters_target: :input,
     badge_name: badge_name,
