--- a/admin/app/views/spree/admin/shared/sidebar/_storefront_nav.html.erb
+++ b/admin/app/views/spree/admin/shared/sidebar/_storefront_nav.html.erb
@@ -3,7 +3,7 @@
   <%= active_link_to_with_icon('building-store', Spree.t(:storefront), spree.admin_themes_path, class: 'nav-link', active: storefront_active) %>
 
   <% if storefront_active %>
-    <ul class="ml-4 font-size-base pl-1 mb-3 nav-submenu flex-column mt-1">
+    <ul class="ml-4 pl-1 mb-2 nav-submenu flex-column mt-1">
       <li class="nav-item">
         <%= active_link_to Spree.t(:themes), spree.admin_themes_path, class: 'nav-link' %>
       </li>
