Remove Spree controller

--- a/admin/app/views/layouts/spree/admin.html.erb
+++ b/admin/app/views/layouts/spree/admin.html.erb
@@ -6,7 +6,7 @@
     <%= javascript_include_tag 'trix' %>
     <%= javascript_importmap_tags 'application-spree-admin' %>
   </head>
-  <body class="admin min-vh-100 <%= controller_name %> <%= action_name %>" data-controller="spree">
+  <body class="admin min-vh-100 <%= controller_name %> <%= action_name %>">
     <div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col-lg-3 col-xl-2 d-none d-lg-block position-relative px-2">
