--- a/admin/app/views/layouts/spree/page_builder.html.erb
+++ b/admin/app/views/layouts/spree/page_builder.html.erb
@@ -6,7 +6,7 @@
 
   <body class="admin bg-light theme_editor page-builder"
         id="page-builder"
-        data-controller="spree page-builder"
+        data-controller="page-builder"
         data-page-builder-preview-url-value="<%= page_preview_url %>"
   >
     <%= render 'spree/admin/shared/alerts' %>
