--- a/admin/app/views/spree/admin/refund_reasons/index.html.erb
+++ b/admin/app/views/spree/admin/refund_reasons/index.html.erb
@@ -2,20 +2,20 @@
   <%= button_link_to Spree.t(:new_refund_reason), new_object_url, { icon: 'plus', id: 'admin_new_named_type', class: "btn-primary" } %>
 <% end if can? :create, Spree::RefundReason %>
 
-<%= render partial: 'spree/admin/shared/returns_and_refunds_nav' %>
+<%= render 'spree/admin/shared/returns_and_refunds_nav' %>
 
 <% if @collection.any? %>
   <div class="table-responsive card-lg p-0">
-    <table class="table" id='listing_named_types">
+    <table class="table">
       <thead class="text-muted">
-      <tr>
-        <th><%= Spree.t(:name) %></th>
-        <th><%= Spree.t(:status) %></th>
-        <th><%= Spree.t(:mutable) %></th>
-        <th></th>
-      </tr>
+        <tr>
+          <th><%= Spree.t(:name) %></th>
+          <th><%= Spree.t(:status) %></th>
+          <th><%= Spree.t(:mutable) %></th>
+          <th></th>
+        </tr>
       </thead>
-      <tbody id="<%= plural_resource_name(Spree::RefundReason).to_s.parameterize.underscore %>">
+      <tbody>
       <% @collection.each do |refund_reason| %>
         <tr id="<%= spree_dom_id refund_reason %>">
           <td class="w-40 align-center">
