--- a/admin/app/views/spree/admin/stock_items/index.html.erb
+++ b/admin/app/views/spree/admin/stock_items/index.html.erb
@@ -30,7 +30,7 @@
     </div>
   <% else %>
     <div class="text-muted p-5 d-flex align-items-center w-100 justify-content-center">
-      <%= Spree.t(:no_resource_found, resource: Spree.t("admin.stock_items.plural_resource_name")) %>
+      <%= Spree.t(:no_resource_found, resource: Spree.t(:stock)) %>
     </div>
   <% end %>
 
