--- a/admin/app/views/layouts/spree/admin.html.erb
+++ b/admin/app/views/layouts/spree/admin.html.erb
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="<%= I18n.locale %>">
   <head>
-    <!-- Trix does not work with importmaps in Rails 7 -->
-    <!-- https://github.com/basecamp/trix/issues/1182 -->
-    <%= javascript_include_tag 'trix' %>
-    <%= javascript_importmap_tags 'application-spree-admin' %>
+    <%= render "spree/admin/shared/head" %>
+    <%= render "spree/admin/shared/custom_head" %>
   </head>
+
   <body class="admin min-vh-100 <%= controller_name %> <%= action_name %>">
     <div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col-lg-3 col-xl-2 d-none d-lg-block position-relative px-2">
-          <%#= render 'spree/admin/shared/sidebar' %>
+          <%= render "spree/admin/shared/sidebar" %>
         </div>
-        <div class="col-lg-9 col-xl-10 px-0 pb-5 mb-3 pt-lg-2">
-          <main id="content" class="container">
-            <% if content_for?(:table_filter) || content_for?(:table_filter_dropdown) %>
-              <div class="card-lg p-0 mb-lg-3">
-                <%= yield %>
-              </div>
-            <% else %>
-              <%= yield %>
-            <% end %>
+        <div class="col-lg-9 col-xl-10 px-0 pt-lg-2">
+          <%= render "spree/admin/shared/header" %>
+
+          <main id="content" class="container h-100 d-flex flex-column">
+            <%= render "spree/admin/shared/content_header" %>
+
+            <%= yield %>
+
+            <%= render "spree/admin/shared/footer" %>
           </main>
         </div>
       </div>
     </div>
+
+    <%= render "spree/admin/shared/modal" %>
+    <%= render "spree/admin/shared/alerts" %>
   </body>
 </html>
