--- a/admin/app/views/spree/admin/products/_table_filter_dropdown.html.erb
+++ b/admin/app/views/spree/admin/products/_table_filter_dropdown.html.erb
@@ -31,5 +31,11 @@
     <h6 class="dropdown-header"><%= Spree.t('admin.products.by_stock') %>:</h6>
 
     <%= active_link_to Spree.t('admin.products.any_stock'), params.to_unsafe_h.deep_merge({page: nil, q: {in_stock_items: nil, out_of_stock_items: nil}}), class: 'dropdown-item', active: (params[:q] || {}).values_at(*%w[status_eq in_stock_items out_of_stock_items] ).all?(&:blank?) %>
+    <%= link_to Spree.t('admin.products.in_stock'),
+        params.to_unsafe_h.deep_merge({page: nil, q: {in_stock_items: '1', out_of_stock_items: nil}}),
+        class: "dropdown-item #{'active' if params[:q][:in_stock_items] == '1'}" %>
+      <%= link_to Spree.t('admin.products.out_of_stock'),
+        params.to_unsafe_h.deep_merge({page: nil, q: {out_of_stock_items: '1', in_stock_items: nil}}),
+        class: "dropdown-item #{'active' if params[:q][:out_of_stock_items] == '1'}" %>
   </div>
 </div>
