--- a/admin/app/views/spree/admin/page_links/_linkable_type_dropdown.html.erb
+++ b/admin/app/views/spree/admin/page_links/_linkable_type_dropdown.html.erb
@@ -1,7 +1,7 @@
 <% if page_link.linkable_type == 'Spree::Product' %>
   <%= tom_select_tag "#{form_name}[linkable_id]", class: 'w-100', url: spree.select_options_admin_products_path(format: :json), active_option: page_link.linkable_id, select_data: { action: 'auto-submit#submit' } %>
 <% elsif page_link.linkable_type == 'Spree::Taxon' %>
-  <%= tom_select_tag "#{form_name}[linkable_id]", class: 'w-100', url: spree.admin_taxons_select_options_path(format: :json), active_option: page_link.linkable_id, select_data: { action: 'auto-submit#submit' } %>
+  <%= tom_select_tag "#{form_name}[linkable_id]", class: 'w-100', url: spree.admin_taxons_select_options_path(format: :json, with_automatic: true), active_option: page_link.linkable_id, select_data: { action: 'auto-submit#submit' } %>
 <% elsif page_link.linkable_type == 'Spree::Post' %>
   <%= tom_select_tag "#{form_name}[linkable_id]", class: 'w-100', url: spree.select_options_admin_posts_path(format: :json), active_option: page_link.linkable_id, select_data: { action: 'auto-submit#submit' } %>
 <% elsif page_link.linkable_type == 'Spree::Page' %>
