--- a/admin/app/views/spree/admin/page_blocks/edit.html.erb
+++ b/admin/app/views/spree/admin/page_blocks/edit.html.erb
@@ -27,10 +27,10 @@
         <div class="tab-pane fade <%= tab_selected == :design ? 'show active' : '' %>" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
           <%= render 'spree/admin/page_sections/fields/top_padding', f: f %>
           <%= render 'spree/admin/page_sections/fields/bottom_padding', f: f %>
-          <% if @page_block.respond_to?(:text_color) %>
+          <% if @page_block.respond_to?(:preferred_text_color) %>
             <%= render 'spree/admin/page_sections/fields/text_color', f: f %>
           <% end %>
-          <% if @page_block.respond_to?(:background_color) %>
+          <% if @page_block.respond_to?(:preferred_background_color) %>
             <%= render 'spree/admin/page_sections/fields/background_color', f: f %>
           <% end %>
           <%= render 'spree/admin/page_sections/fields/button', f: f %>
