--- a/admin/app/views/spree/admin/shared/_calendar_range_picker.html.erb
+++ b/admin/app/views/spree/admin/shared/_calendar_range_picker.html.erb
@@ -1,6 +1,6 @@
 <% date_from_input_name ||= :date_from %>
 <% date_to_input_name ||= :date_to %>
-<% css_classes ||= "btn btn-light d-inline-flex align-items-center h-100" %>
+<% css_classes ||= "btn btn-light d-inline-flex align-items-center h-100 dropdown-toggle" %>
 
 <% date_from_value ||= params[date_from_input_name] %>
 <% date_to_value ||= params[date_to_input_name] %>
@@ -10,15 +10,14 @@
 <div data-controller="calendar-range" class="dropdown h-100" 
      data-action="click->calendar-range#open">
   <div class="<%= css_classes %>" data-toggle="dropdown">
-    <%= icon('calendar') %>
+    <%= icon('calendar', class: 'mr-2') %>
     <div data-calendar-range-target="label">
       <% if date_from_value.present? && date_to_value.present? %>
         <%= date_from_value.to_date %> - <%= date_to_value.to_date %>
       <% else %>
-        All time
+        <%= Spree.t(:all_time) %>
       <% end %>
     </div>
-    <%= icon 'chevron-down', class: 'arrow mr-0 ml-2 text-muted' %>
   </div>
   <div class="dropdown-menu dropdown-menu-<%= dropdown_direction %> pb-0 pr-0 pl-1 pt-1" onclick="event.stopPropagation()">
     <div data-calendar-range-target="picker" class="d-none"></div>
