Add metadata link to the rest of the views

--- a/admin/app/views/spree/admin/properties/edit.html.erb
+++ b/admin/app/views/spree/admin/properties/edit.html.erb
@@ -3,6 +3,9 @@
   <%= @property.name %>
 <% end %>
 
+<% content_for(:page_actions_dropdown) do %>
+  <%= link_to_edit_metadata(@property) %>
+<% end %>
 
 <%= form_for [:admin, @property] do |f| %>
   <div class="card mb-4">
