--- a/admin/app/views/spree/admin/stores/form/_basic.html.erb
+++ b/admin/app/views/spree/admin/stores/form/_basic.html.erb
@@ -2,8 +2,9 @@
   <%= Spree.t(:store_details) %>
 <% end %>
 
-<%= content_for(:page_actions) do %>
-  <%= link_to_edit_translations(@store, classes: 'btn btn-light') %>
+<% content_for(:page_actions_dropdown) do %>
+  <%= link_to_edit_translations(@store) %>
+  <%= link_to_edit_metadata(@store) %>
 <% end %>
 
 <div class="row">
